# kirasb

./: .gitignore  CMakeLists.txt  README.md  kir.py
.github/workflows/: build.yml
src/: main.cpp  render.hpp
src/core/: dbglog.h  mem.cpp  mem.h  vecmath.h
src/esp/: esp.cpp  esp.h
src/offsets/: il2cpp_api.h  materials.h  memory.hpp  offsets.hpp  rust-dumper_output.h
src/overlay/: overlay.cpp  overlay.h
